--- a/swiggy/style.css
+++ b/swiggy/style.css
@@ -1,3 +1,7 @@
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
 .headerContainer{
     display: flex;
     justify-content: space-between;
@@ -32,7 +36,8 @@
 }
 
 .restroCard:hover{
-    border: 1px solid rgb(50, 50, 50);
+    /* border: 1px solid rgb(50, 50, 50); */
+    background: #f0f0f0;
 }
 
 .restroImage{
@@ -41,8 +46,25 @@
 
 .restroCard{
     width: 300px;
-    background: #f0f0f0;
     padding: 10px;
     margin: 10px;
+}
+
+.shimmerContainer{
+    display: flex;
+    flex-wrap: wrap;
+    /* width: 100%; */
+    justify-content: center;
+    
+}
+
+.shimmerCard{
+    width: 300px;
+    background: #f0f0f0;
+    padding: 10px;
+    height: 450px;
+    margin-left: 60px;
+    margin-right: 30px;
+    margin-top: 50px;
 }
 
