--- a/swiggy/style.css
+++ b/swiggy/style.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer utilities {
+    @variants responsive {
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+
+      /* Hide scrollbar for IE, Edge and Firefox */
+      .no-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+      }
+    }
+  }
+
+  @layer components{
+    .accordion-header{
+      @apply py-4 px-6 cursor-pointer
+    }
+    .accordion-body{
+      @apply max-h-0 overflow-hidden transition-all duration-200 ease-out
+    }
+  }
